# backend/app/routers/__init__.py
@@ -7,6 +7,7 @@ from app.routers.health import router as health_router
 from app.routers.idea_assets import router as idea_assets_router
 from app.routers.ideas import router as ideas_router
 from app.routers.provenance import router as provenance_router
+from app.routers.recording_cadences import router as recording_cadences_router
 from app.routers.recording_tracks import router as recording_tracks_router
 from app.routers.recordings import router as recordings_router
 from app.routers.sessions import router as sessions_router
@@ -17,6 +18,7 @@ api_router.include_router(ideas_router)
 api_router.include_router(idea_assets_router)
 api_router.include_router(provenance_router)
 api_router.include_router(recordings_router)
+api_router.include_router(recording_cadences_router)
 api_router.include_router(recording_tracks_router)
 api_router.include_router(sessions_router)
 
